--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,10 @@ version: '3.7'
 
 services:
 
-  number_counter:
-    container_name: number_counter
+  number_counter-prod:
+    container_name: number_counter-prod
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - '.:/app'
-      - '/app/node_modules'
     ports:
-      - 3001:3000
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+      - '1337:80'
